	PR c++/43321 	* semantics.c (describable_type): Remove. 	* cp-tree.h: Likewise. 	* decl.c (cp_finish_decl): Don't call it. 	* init.c (build_new): Likewise. 	* parser.c (cp_parser_omp_for_loop): Likewise. 	* pt.c (tsubst_decl): Likewise. 	(do_auto_deduction): If we fail in a template, try again 	at instantiation time.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@175212 138bc75d-0d04-0410-961f-82ee72b054a4